<?xml version="1.0" encoding="utf-8"?>
<!--
MyWallet is an android application which helps users to manager their personal accounts.
Copyright (C) 2012 Santiago Munin

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">MyWallet</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="error_empty">Empty field</string>
    <string name="error_not_exists">Selected item doesn\'t exists.</string>
    <string name="error_already_exists">An item with same information already exists.</string>
    <string name="error_cat_alreadyExists">A category with that name already exists.</string>
    <string name="error_addingCashFlow">There was a problem adding the operation.</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="period">Period</string>
    <string name="date">Date</string>
    <string name="until">Until</string>
    <string name="concept">Concept</string>
    <string name="movType">Type</string>
    <string name="amount">Amount</string>
    <string name="error_fieldsNotFilled">There are required field without values.</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="incomes">Incomes</string>
    <string name="balance">Balance</string>
    <string name="once">Single</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Annual</string>
    <string name="today">Today</string>
    <string name="indefinite">Indefinite</string>
    <string name="categories">Categories</string>
    <string name="manage_categories">Manage categories</string>
    <string name="add_cashflow">Add a movement</string>
    <string name="added">Added</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="movementsoverview">Movements overview</string>
    <string name="topcat">Top categories</string>
    <string name="new_category">New&#8230;</string>
    <string name="new_category_dialog">Type a new category</string>
    <string name="not_category_selected">A category must be selected</string>
    <string name="endDate_before_date">The ending date must be after the operation date</string>
    <string name="bad_amount">You haven\'t provided a correct amount</string>
    <string name="currency">Currency</string>
    <string name="options">Options</string>
    <string name="other">Other</string>
    <string name="view_all_movements">View all movements</string>
    <string name="list_empty_message">There aren\'t movements</string>
    <string name="ends">Ends</string>
    <string name="select_currency">Select currency</string>
    <string name="from">From</string>
    <string name="edit_operation">Edit operation</string>
    <string name="edit">Edit</string>
    <string name="category_name_exists">A category with that name already exists.</string>
    <string name="updated">Updated</string>

</resources>