<?xml version="1.0" encoding="utf-8"?>
<!--
MyWallet is an android application which helps users to manager their personal accounts.
Copyright (C) 2012 Santiago Munin

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:padding="5dp"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/addOp_catRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/addOp_catSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/addOp_conceptRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/concept" />

            <EditText
                android:id="@+id/addOp_conceptEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/addOp_movTypeRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/movType" />

            <Spinner
                android:id="@+id/addOp_movTypeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/addOp_periodRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/period" />

            <Spinner
                android:id="@+id/addOp_periodSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/addOp_amountRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/addOp_amountEntry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/addOp_DateRow"
            style="@style/AddOpTableRow" >

            <TextView
                android:id="@+id/label_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <Button
                android:id="@+id/addOp_dateButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/today" />
        </TableRow>

        <TableRow
            android:id="@+id/addOp_endDateRow"
            style="@style/AddOpTableRow"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/label_endDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/until" />

            <Button
                android:id="@+id/addOp_endDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indefinite" />
            
            <ImageButton android:id="@+id/addOp_endDateClearButton"
                android:src="@android:drawable/ic_notification_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <Button
            android:id="@+id/addOp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add" />
    </TableLayout>

</ScrollView>