<?xml version="1.0" encoding="utf-8"?>
<!--
MyWallet is an android application which helps users to manager their personal accounts.
Copyright (C) 2012 Santiago Munin

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_operation"
        android:icon="@drawable/add_operation"
        android:title="@string/add_cashflow"/>
    <item
        android:id="@+id/manage_categories"
        android:icon="@drawable/manage_categories"
        android:title="@string/manage_categories"/>
    <item
        android:id="@+id/change_currency"
        android:icon="@drawable/euro_currency_sign"
        android:title="@string/select_currency"/>

</menu>